Implemented Fraud Detection Service